--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "love-local",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://anshuman301.github.io/love-local/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -23,6 +26,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
